--- a/T.html
+++ b/T.html
@@ -14,11 +14,17 @@
 <body>
          <section id="landing">
               <nav>
-                <div class="row nav__row">
+                <div class="nav__row">
                 <div class= "nav__logo">
                 <img class="nav__logo--img" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="LOGO">
                 <div class="nav__logo--title">Treact</div>
                 </div>
+                  <div class="nav__links">
+          <a href="#features" class="nav__link">Features</a>
+          <a href="#pricing" class="nav__link">Pricing</a>
+          <a href="#testimonials" class="nav__link">Testimonials</a>
+        </div>
+
                 <button class="btn__menu" onclick="openMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -40,7 +46,7 @@
                 </ul>
             </nav>
 
-            <div class=""hero-content">
+            <div class="hero-content">
               </div>
                   
               
@@ -49,9 +55,9 @@
             <div class="container">
                 <div class="row">
                   <div class="header__description">
-              <h1>
-                Beautiful React Templates 
-                <span class="purple">for you.</span>
+                   <h1>
+                  Beautiful React Templates 
+                 <span class="purple">for you.</span>
               </h1>
               <p class="header__description--para">
                 Our templates are easy to setup, understand and customize. Fully
@@ -69,8 +75,9 @@
               <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
             </figure>
             </div>
+            </div>
         </header>
-    </section>
+  
     <main>
         <section id="features">
             <div class="container">
@@ -111,8 +118,13 @@
                       quis nostrud.
                     </p>
                   </div>
-                </div>
+                 </div>
+               </div>
               </div>
+            </div>
+          </div>
+         </section> 
+       </main>
               <div class="feature">
                 <div class="feature__row">
                   <figure class="feature__img--wrapper">
