--- a/T.html
+++ b/T.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/6487f0a3d4.js" crossorigin="anonymous">
-    <script src="index.js"></script>
+  <script src="https://kit.fontawesome.com/6487f0a3d4.js" crossorigin="anonymous"></script>
     <title>Treact Landing</title>
 </head>
 
