--- a/T.html
+++ b/T.html
@@ -125,7 +125,9 @@
                   </figure>
                   <div class="feature__text">
                     <h2 class="feature__title">Customizable</h2>
-                    <p class="feature__para"></p>
+                    <p class="feature__para">
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, dolorum?
+                    </p>
                   </div>
                 </div>
               </div>
@@ -545,7 +547,7 @@
             © 2018 Treact Inc. All Rights Reserved.
           </div>
           <div class="footer__socials">
-            <a class="footer__social--link">
+        
                 <a class="footer__social--link" href="#"aria-label="Facebook">
               <svg fill="currentColor" viewBox="0 0 24 24">
                 <path d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z"></path>
