--- a/T.html
+++ b/T.html
@@ -400,11 +400,12 @@
               </svg>
             </div>
             </div>
+            </div>
         </section>
         <section id="testimonials">
             <div class="container">
                 <div class="row">
-                 <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="class="testimonial__img">
+                 <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt class="testimonials__img">
                  <div class="testimonials__description">
               <div class="section__tag">testimonials</div>
               <h2 class="section__title">
@@ -457,9 +458,9 @@
                 </div>
               </div>
             </div>
-                </div>
-            </div>
-        </section>
+         </div>
+      </div>
+      </section>
         <section id="start">
             <div class="container">
                 <div class="row">
