--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
                 <input type="text" class="header__email--input" placeholder="Your E-mail Address">
                 <button class="header__email--btn">Get Started</button>
               </div>
-              <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
+             <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
               <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="header__customers">
             </div>
             <figure class="header__img--wrapper">
               <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
             </figure>
-            </div>
-            </div>
-        </header>
-      </section>
+          </div>
+        </div>
+      </header>
+        </section>
    <main>
         <section id="features">
             <div class="container">
@@ -93,7 +93,7 @@
               <div class="feature">
                 <div class="feature__row">
                   <figure class="feature__img--wrapper">
-                    <img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img">
+                    <img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="features__img">
                   </figure>
                   <div class="feature__text">
                     <h2 class="feature__title">Secure</h2>
@@ -186,7 +186,6 @@
                 Designed & Developed by
                 <span class="purple">Profressionals.</span>
               </h2>
-
               <p class="section__para">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
                 quam cupiditate commodi qui excepturi laborum adipisci officiis,
